--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 html{
     scroll-behavior: smooth ;
@@ -83,11 +84,13 @@ form input{
 @media screen and (max-width: 768px) {
     form input{
         width: 150px;
+        overflow: hidden;
     }
 }
 @media screen and (max-width:1024px) {
     form input{
         width: 150px;
+        overflow: hidden;
     }
 }
 /* ==================================================================*/
